--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,8 +3,9 @@
   margin-top: 3em;
 }
 
-.about__name {
+.about__name, .university {
   color: var(--clr-primary);
+  background-color: transparent;
 }
 
 .about__role {
@@ -35,3 +36,19 @@
     margin-top: 2em;
   }
 }
+
+.propic {
+  width: 256px;
+  margin-bottom: 40px;
+  border-radius: 50%;
+  box-shadow: var(--shadow);
+}
+
+.light .propic {
+  --shadow: rgba(100, 100, 111, 0.4) 0px 15px 29px 0px;
+}
+
+/* .propic:hover {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+} */
