--- a/src/components/Publications/Publications.css
+++ b/src/components/Publications/Publications.css
@@ -2,6 +2,17 @@
   max-width: 1100px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+  grid-template-columns: repeat(1, 1fr);
   grid-gap: 2em;
+}
+
+.publications__grid h4 {
+  text-align: left;
+  /* margin-left: 1em; */
+}
+
+.publications__grid p {
+  text-align: left;
+  margin-bottom: 1em;
+  /* margin-left: 1em; */
 }
