Design and overlay changes completed

--- a/src/components/WorkExperience/WorkExperience.css
+++ b/src/components/WorkExperience/WorkExperience.css
@@ -16,4 +16,12 @@
     margin-bottom: 1em;
     /* margin-left: 1em; */
   }
+
+  .workex b{
+    font-size: medium;
+  }
+
+  .workex_years{
+    font-size: small;
+  }
   
