Fixed issues regarding bullet points in workEx

--- a/src/components/ProjectContainer/ProjectContainer.css
+++ b/src/components/ProjectContainer/ProjectContainer.css
@@ -1,9 +1,12 @@
 .project {
   padding: 2em;
   margin: 0 auto;
-  text-align: center;
   box-shadow: var(--shadow);
   transition: transform 0.2s linear;
+}
+
+.project__workExperiencePoints{
+  text-decoration: dashed;
 }
 
 .project:hover {
@@ -11,10 +14,12 @@
 }
 
 .project__description {
+  text-align: center;
   margin-top: 1em;
 }
 
 .project__stack {
+  text-align: center;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -22,6 +27,7 @@
 }
 
 .project__stack-item {
+  text-align: center;
   margin: 0.5em;
   font-weight: 500;
   font-size: 0.8rem;
