--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,12 +1,51 @@
-.skills__list {
-  max-width: 450px;
+/* .skills__list {
+  max-width: 600px;
   width: 95%;
   margin: 0 auto;
-  display: flex;
+  display: grid;
   flex-wrap: wrap;
   justify-content: center;
 }
 
 .skills__list-item {
   margin: 0.5em;
+} */
+
+
+.skills__grid {
+  max-width:90%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25em, 1fr)); 
 }
+
+/* .skills__list {
+  max-width: 1100px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+
+
+.skill-item {
+  font-weight: lighter;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+} */
+
+/* .skill-name {
+  flex-shrink: 0;
+  margin-right: 1em;
+  min-width: 80px;
+} */
+
+/* .progressbar{
+  font-weight: 100;
+  font-size: small;
+} */
+
+/* .progressbar-container {
+  flex-grow: 1;
+} */
